
2010/xx/xx  ver 0.3.2
   - introduce cmake
       - see README for compile.  
   - change MAX_TEXTURE_UNITS=4
   - argument of Transform is changed from "pass by value" to "pass by reference"
   - implement jpeg loader
   - implement Object3D::getReferences()
   - fix loading indexed png
   - fix blend color of Texture2D
   - and so many bug fix.

2010/08/31  ver 0.3.1
   - replace Loader.cpp by new version which uses libM3GReaderWriter.
   - include source of libM3GReaderWriter.
   - exclude ruby-m3g as independent project.
   - verify to work under 32bit environment.
   - add mark() for ruby-m3g

2010/06/06  ver 0.3.0
   - Yes, I implemented all 30 classes defined by M3G-1.1 (JSR-184)
       - Some features are still buggy or untested.
       - But anyway, I implemented all.
   - remove GLEW
   - implement RayIntersection class.
   - implement picking.

2010/05/10  ver 0.2.0
   - implemente SkinndMesh, MorphingMesh.
   - implemente duplicate() method.
   - rewrite Loader class.
       - Now, compressed file is ok.
   - fix color component from (-128,127) to (0,255).
   - fix scale,biased coordinate.
       - Now, it's ok.

2010/04/08  ver 0.1.0
   - first release