@@ -1,12 +1,16 @@
 
 2010/xx/xx  ver 0.3.2
    - introduce cmake
-       - see README for compile.  
+       - see README for compile.
+   - separate some codes to extlib
+       - exlib/m3g-reader-writer
+       - png-helper
+       - jpeg-helper
    - change MAX_TEXTURE_UNITS=4
    - argument of Transform is changed from "pass by value" to "pass by reference"
    - implement jpeg loader
    - implement Object3D::getReferences()
-   - fix loading indexed png
+   - fix indexed png loding of Loader
    - fix blend color of Texture2D
    - and so many bug fix.
 
